# kazi-ai

./: AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
kazi_ai/: __init__.py  payroll.py
tests/: test_smoke.py
